--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="h-full">
+<body class="h-full bg-gray-50 justify-center min-h-screen">
   <div class="min-h-full">
     <nav class="border-b border-gray-200 bg-white">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
