--- a/views/show.erb
+++ b/views/show.erb
@@ -128,7 +128,7 @@
     <div class="border-gray-200 bg-white px-2 py-3 sm:px-3">
       <div class="-ml-4 -mt-2 flex flex-wrap items-center justify-between sm:flex-nowrap">
         <div class="ml-0 mt-0">
-          <h3 class="text-base leading-6">Completed issues or pull requests</h3>
+          <h3 class="text-base leading-6">Remaining issues or pull requests</h3>
         </div>
         <div class="ml-0 mt-0 flex-shrink-0">
           Story Points
