--- a/views/layout.erb
+++ b/views/layout.erb
@@ -77,7 +77,19 @@
               </nav>
             </div>
           <% end %>
-          <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900"><%= @title %></h1>
+
+          <div class="lg:flex lg:items-center lg:justify-between">
+            <div class="min-w-0 flex-1">
+              <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"><%= @title %></h1>
+              <% if content_for? :subtitle %>
+                <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
+                  <div class="mt-2 flex items-center text-sm text-gray-500">
+                    <%= yield_content :subtitle %>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          </div>
         </div>
       </header>
       <main>
