--- a/views/project.erb
+++ b/views/project.erb
@@ -1,10 +1,10 @@
-<% if @sprints.any? %>
+<% if @project.sprints.any? %>
   <ul role="list" class="divide-y divide-gray-100">
-    <% @sprints.each do |sprint| %>
+    <% @project.sprints.order(start_date: :desc).each do |sprint| %>
       <li class="flex items-center justify-between gap-x-6 py-5">
         <div class="min-w-0">
           <div class="flex items-start gap-x-3">
-            <p class="text-sm font-semibold leading-6 text-gray-900"><a href="/<%= sprint.id %>"><%= sprint.title %></a></p>
+            <p class="text-sm font-semibold leading-6 text-gray-900"><a href="/sprints/<%= sprint.id %>"><%= sprint.title %></a></p>
             <% if sprint.planned? %>
               <p class="mt-0.5 whitespace-nowrap rounded-md bg-gray-50 px-1.5 py-0.5 text-xs font-medium text-gray-700 ring-1 ring-inset ring-gray-600/20">Planned</p>
             <% elsif sprint.in_progress? %>
@@ -24,5 +24,5 @@
     <% end %>
   </ul>
 <% else %>
-  No sprints found
+  No sprints found for this project
 <% end %>
