--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -1,4 +1,16 @@
 <% sprint = @sprint %>
+<% content_for(:subtitle) do %>
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
+  </svg>
+
+  <span class="ml-2">
+    <%= sprint.start_date.strftime("%B %d, %Y") %> - <%= @sprint.end_date.strftime("%B %d, %Y") %> 
+    <% if sprint.in_progress? %>
+      (<%= (sprint.end_date - Date.today).to_i %> days left)
+    <% end %>
+  </span>
+<% end %>
 
 <div class="w-full max-w-4xl mx-auto p-4 bg-white shadow-md rounded-lg">
   <div class="relative">
@@ -128,9 +140,9 @@
     <div class="border-gray-200 bg-white px-2 py-3 sm:px-3">
       <div class="-ml-4 -mt-2 flex flex-wrap items-center justify-between sm:flex-nowrap">
         <div class="ml-0 mt-0">
-          <h3 class="text-base leading-6">Remaining issues or pull requests</h3>
+          <h3 class="font-bold text-base leading-6">Remaining issues or pull requests</h3>
         </div>
-        <div class="ml-0 mt-0 flex-shrink-0">
+        <div class="font-bold ml-0 mt-0 flex-shrink-0">
           Story Points
         </div>
       </div>
@@ -152,9 +164,9 @@
     <div class="border-gray-200 bg-white px-2 py-3 sm:px-3">
       <div class="-ml-4 -mt-2 flex flex-wrap items-center justify-between sm:flex-nowrap">
         <div class="ml-0 mt-0">
-          <h3 class="text-base leading-6">Completed issues or pull requests</h3>
+          <h3 class="text-base font-bold leading-6">Completed issues or pull requests</h3>
         </div>
-        <div class="ml-0 mt-0 flex-shrink-0">
+        <div class="font-bold ml-0 mt-0 flex-shrink-0">
           Story Points
         </div>
       </div>
