Add Project; display sprint off track

--- a/views/project.erb
+++ b/views/project.erb
@@ -24,5 +24,5 @@
     <% end %>
   </ul>
 <% else %>
-  No sprints found for this project
+  No sprints found for this project. If this Project was just added, sprints will sync soon.
 <% end %>
