--- a/views/projects.erb
+++ b/views/projects.erb
@@ -1,3 +1,4 @@
+<a href="/projects/new" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Add Project</a>
 <% if @projects.any? %>
   <ul role="list" class="divide-y divide-gray-100">
     <% @projects.each do |project| %>
