Add sprint icons

--- a/views/project.erb
+++ b/views/project.erb
@@ -3,14 +3,18 @@
     <% @project.sprints.order(start_date: :desc).each do |sprint| %>
       <li class="flex items-center justify-between gap-x-6 py-5">
         <div class="min-w-0">
-          <div class="flex items-start gap-x-3">
+          <div class="flex items-start gap-x-1">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 6-6m0 0 6 6m-6-6v12a6 6 0 0 1-12 0v-3" />
+            </svg>
+
             <p class="text-sm font-semibold leading-6 text-gray-900"><a href="/sprints/<%= sprint.id %>"><%= sprint.title %></a></p>
             <% if sprint.planned? %>
-              <p class="mt-0.5 whitespace-nowrap rounded-md bg-gray-50 px-1.5 py-0.5 text-xs font-medium text-gray-700 ring-1 ring-inset ring-gray-600/20">Planned</p>
+              <p class="mt-0.5 whitespace-nowrap rounded-md bg-gray-50 ml-2 px-1.5 py-0.5 text-xs font-medium text-gray-700 ring-1 ring-inset ring-gray-600/20">Planned</p>
             <% elsif sprint.in_progress? %>
-              <p class="mt-0.5 whitespace-nowrap rounded-md bg-blue-50 px-1.5 py-0.5 text-xs font-medium text-blue-600 ring-1 ring-inset ring-blue-500/10">In progress</p>
+              <p class="mt-0.5 whitespace-nowrap rounded-md bg-blue-50 ml-2 px-1.5 py-0.5 text-xs font-medium text-blue-600 ring-1 ring-inset ring-blue-500/10">In progress</p>
             <% elsif sprint.completed? %>
-              <p class="mt-0.5 whitespace-nowrap rounded-md bg-green-50 px-1.5 py-0.5 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Complete</p>
+              <p class="mt-0.5 whitespace-nowrap rounded-md bg-green-50 ml-2 px-1.5 py-0.5 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Complete</p>
             <% end %>
           </div>
           <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
