--- a/views/project.erb
+++ b/views/project.erb
@@ -28,5 +28,5 @@
     <% end %>
   </ul>
 <% else %>
-  No sprints found for this project. If this Project was just added, sprints will sync soon.
+  No sprints found for this project.
 <% end %>
