--- a/views/_issue.erb
+++ b/views/_issue.erb
@@ -1,13 +1,21 @@
 <ul role="list" class="divide-y divide-gray-100">
   <li class="flex items-center justify-between gap-x-6 py-1">
     <div class="min-w-0">
-      <div class="flex items-start gap-x-3">
-        <p class="text-sm font-semibold leading-6 text-gray-900"><a href="<%= issue.url %>" target="_blank" class="hover:underline"><%= issue.title %></a></p>
+      <div class="flex items-start gap-x-2">
         <% if issue.open? %>
-          <p class="mt-0.5 whitespace-nowrap rounded-md bg-green-50 px-1.5 py-0.5 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Open</p>
+          <div class="pt-1">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="size-4 text-green-700" aria-label="issue-opened" role="img">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.515 3.515a12 12 0 1116.97 16.97 12 12 0 01-16.97-16.97zm1.59 1.59a9.75 9.75 0 1013.79 13.79 9.75 9.75 0 00-13.79-13.79zm8.486 8.486a2.25 2.25 0 11-3.182-3.183 2.25 2.25 0 013.182 3.183z" fill="currentColor" />
+            </svg>
+          </div>
         <% elsif issue.closed? %>
-          <p class="mt-0.5 whitespace-nowrap rounded-md bg-purple-50 px-1.5 py-0.5 text-xs font-medium text-purple-700 ring-1 ring-inset ring-purple-600/20">Closed</p>
+          <div class="pt-0">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 text-purple-700" role="img" aria-label="issue-closed">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+            </svg>
+          </div>
         <% end %>
+        <p class="text-sm font-semibold leading-6 text-gray-900"><a href="<%= issue.url %>" target="_blank" class="hover:underline"><%= issue.title %></a></p>
         <% if issue.unplanned?(sprint) %>
           <p class="mt-0.5 whitespace-nowrap rounded-md bg-yellow-50 px-1.5 py-0.5 text-xs font-medium text-yellow-700 ring-1 ring-inset ring-yellow-600/20">Unplanned</p>
         <% end %>
