--- a/views/project.erb
+++ b/views/project.erb
@@ -18,8 +18,19 @@
             <% end %>
           </div>
           <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
+            </svg>
+
             <p class="whitespace-nowrap">
-              <%= sprint.planned? ? "Starts" : "Started" %> on <time datetime="2023-03-17T00:00Z"><%= sprint.start_date.strftime("%B %d, %Y") %></time></p>
+            <time datetime="<%= sprint.start_date.strftime('%Y-%m-%dT%H:%MZ') %>">
+              <%= sprint.start_date.year == Date.today.year ? sprint.start_date.strftime("%b %d") : sprint.start_date.strftime("%b %d, %Y") %>
+            </time>
+            &ndash;
+            <time datetime="<%= sprint.end_date.strftime('%Y-%m-%dT%H:%MZ') %>">
+              <%= sprint.end_date.year == Date.today.year ? (sprint.start_date.month == sprint.end_date.month ? sprint.end_date.strftime("%d") : sprint.end_date.strftime("%b %d")) : sprint.end_date.strftime("%b %d, %Y") %>
+            </time>
+            </p>
           </div>
         </div>
         <div class="flex flex-none items-center gap-x-4">
