--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -36,9 +36,9 @@
       <h3 class="font-semibold mb-2">Story Points</h3>
       <div class="flex items-center">
         <div class="w-full bg-gray-200 rounded-full h-2.5">
-          <div class="bg-blue-600 h-2.5 rounded-full" style="width: <%= ((sprint.points_completed.to_f / sprint.points) * 100).round %>%;"></div>
+          <div class="bg-blue-600 h-2.5 rounded-full" style="width: <%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%;"></div>
         </div>
-        <span class="ml-2 text-gray-700 font-semibold"><%= ((sprint.points_completed.to_f / sprint.points) * 100).round %>%</span>
+        <span class="ml-2 text-gray-700 font-semibold"><%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%</span>
       </div>
       <div class="flex justify-between text-gray-600 mt-2">
         <div>
