--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -61,9 +61,9 @@
       <h3 class="font-semibold mb-2">Issues and Pull Requests</h3>
       <div class="flex items-center">
         <div class="w-full bg-gray-200 rounded-full h-2.5">
-          <div class="bg-green-600 h-2.5 rounded-full" style="width: <%= ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%;"></div>
+          <div class="bg-green-600 h-2.5 rounded-full" style="width: <%= sprint.issues.count == 0 ? 0 : ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%;"></div>
         </div>
-        <span class="ml-2 text-gray-700 font-semibold"><%= ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%</span>
+        <span class="ml-2 text-gray-700 font-semibold"><%= sprint.issues.count == 0 ? 0 : ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%</span>
       </div>
       <div class="flex justify-between text-gray-600 mt-2">
         <div>
