--- a/views/projects.erb
+++ b/views/projects.erb
@@ -1,4 +1,6 @@
-<a href="/projects/new" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Add Project</a>
+<a href="/projects/new" rel="noopener nofollow noreferrer" class="inline-flex items-center justify-center h-9 mr-3 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+  Add Project
+</a>
 <% if @projects.any? %>
   <ul role="list" class="divide-y divide-gray-100">
     <% @projects.each do |project| %>
@@ -8,7 +10,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M9 4.5v15m6-15v15m-10.875 0h15.75c.621 0 1.125-.504 1.125-1.125V5.625c0-.621-.504-1.125-1.125-1.125H4.125C3.504 4.5 3 5.004 3 5.625v12.75c0 .621.504 1.125 1.125 1.125Z" />
             </svg>
-            <p class="text-sm font-semibold leading-6 text-gray-900"><a href="/projects/<%= project.id %>"><%= project.title %></a></p>
+            <p class="text-sm font-semibold leading-6 text-gray-900"><a href="/projects/<%= project.id %>" class="hover:underline"><%= project.title %></a></p>
             <% unless project.public %>
               <span class="inline-flex items-center rounded-full bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">
                 Private
@@ -16,12 +18,20 @@
             <% end %>
              
           </div>
-          <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
+          <div class="mt-1 flex items-center gap-x-1 text-xs leading-5 text-gray-500">
             <p class="whitespace-nowrap">
-              #<%= project.number %> added <time datetime="2023-03-17T00:00Z"><%= project.created_at.strftime("%B %d, %Y") %></time></p>
+              #<%= project.number %>
+              added <time datetime="<%= project.created_at.strftime('%Y-%m-%dT%H:%MZ') %>"> <%= time_ago_in_words(project.created_at) %> ago
+          </time>
+            </p>
           </div>
         </div>
         <div class="flex flex-none items-center gap-x-4">
+          <a href="<%= project.url %>" target="_blank" rel="noopener nofollow noreferrer" class="inline-flex items-center justify-center h-9 mr-3 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+            <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z" clip-rule="evenodd"></path>
+            </svg> View on GitHub
+          </a>
         </div>
       </li>
     <% end %>
