--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -11,7 +11,7 @@
               <label for="username" class="block text-sm font-medium leading-6 text-gray-900">URL</label>
               <div class="mt-2">
                 <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-xl">
-                  <input type="text" name="url" id="url" autofocus="autofocus" autocomplete="url" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="https://github.com/dep...">
+                  <input type="text" name="url" id="url" pattern="^(https?:\/\/)?(www\.)?github\.com\/orgs\/[^\/]+\/projects\/\d+$" autofocus="autofocus" autocomplete="url" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="https://github.com/dep...">
                 </div>
               </div>
             </div>
@@ -21,8 +21,19 @@
 
       <div class="mt-6 flex items-center gap-x-6 justify-end">
         <a href="/" class="text-sm font-semibold leading-6 text-gray-900">Cancel</a>
-        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+        <button type="submit" data-disable-with="Saving..." class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
       </div>
     </form>
   </div>
 </div>
+
+<script>
+  document.querySelector('form').addEventListener('submit', function() {
+    var submitButton = this.querySelector('button[data-disable-with]');
+    if (submitButton) {
+      submitButton.disabled = true;
+      submitButton.dataset.originalText = submitButton.innerText;
+      submitButton.innerText = submitButton.dataset.disableWith;
+    }
+  });
+</script>
