--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,14 @@
 <!doctype html>
-<html class="h-full">
+<html class="h-full dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="h-full bg-gray-50 justify-center min-h-screen">
+<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-white">
   <div class="min-h-full">
-    <nav class="border-b border-gray-200 bg-white">
+    <nav class="border-b border-gray-200 bg-white dark:bg-black dark:border-gray-700">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 justify-between">
           <div class="flex">
@@ -18,14 +18,14 @@
               </svg>
             </div>
             <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
-              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900" aria-current="page">Sprint Reports</a>
+              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900 dark:text-gray-400" aria-current="page">Sprint Reports</a>
             </div>
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:items-center">
           </div>
           <div class="-mr-2 flex items-center sm:hidden">
             <!-- Mobile menu button -->
-            <button type="button" class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" aria-controls="mobile-menu" aria-expanded="false">
+            <button type="button" class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:ring-gray-500" aria-controls="mobile-menu" aria-expanded="false">
               <span class="absolute -inset-0.5"></span>
               <span class="sr-only">Open main menu</span>
               <!-- Menu open: "hidden", Menu closed: "block" -->
@@ -43,10 +43,7 @@
 
       <div class="sm:hidden hidden" id="mobile-menu">
         <div class="space-y-1 pb-3 pt-2">
-          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700" aria-current="page">Sprint Reports</a>
-        </div>
-        <div class="border-t border-gray-200 pb-3 pt-4">
-          <div class="flex items-center px-4">
+          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-300" aria-current="page">Sprint Reports</a>
         </div>
       </div>
     </nav>
@@ -56,7 +53,7 @@
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <% if @breadcrumbs.present? %>
             <div class="mb-4">
-              <nav class="hidden sm:flex" aria-label="Breadcrumb">
+              <nav aria-label="Breadcrumb">
                 <ol role="list" class="flex items-center space-x-4">
                   <% @breadcrumbs.each_with_index do |breadcrumb, index| %>
                     <li>
@@ -77,25 +74,36 @@
             </div>
           <% end %>
 
-          <div class="lg:flex lg:items-center lg:justify-between">
+        </div>
+      </header>
+      <main class="max-w-screen-xl mx-auto px-4 sm:px-6">
+        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-300">
+          <div class="px-4 py-5 sm:px-6">
             <div class="min-w-0 flex-1">
-              <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"><%= @title %></h1>
+              <% if content_for?(:title) %>
+                <%= yield_content(:title) %>
+              <% elsif @title %>
+                <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight dark:text-gray-500"><%= @title %></h1>
+              <% end %>
               <% if content_for? :subtitle %>
                 <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
-                  <div class="mt-2 flex items-center text-sm text-gray-500">
+                  <div class="mt-2 flex items-center text-sm text-gray-500 dark:text-gray-500">
                     <%= yield_content :subtitle %>
                   </div>
                 </div>
               <% end %>
             </div>
           </div>
-        </div>
-      </header>
-      <main>
-        <div class="mx-auto max-w-7xl px-4 py-8 sm:px-6 lg:px-8">
-          <%= yield %>
-        </div>
-      </main>
+          <div class="px-4 py-5 sm:p-6">
+            <%= yield %>
+          </div>
+          <% if content_for? :card_footer %>
+             <div class="px-4 py-4 sm:px-6">
+               <%= yield_content :card_footer %>
+             </div>
+           <% end %>
+         </div>
+       </main>
     </div>
   </div>
   <script>
