--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -16,7 +16,7 @@
         <%= sprint.start_date.strftime("%b %d, %Y") %> - <%= sprint.end_date.strftime("%b %d, %Y") %>
       <% end %>
       <% if sprint.in_progress? %>
-        (<%= (sprint.end_date - Date.today).to_i %> days left)
+        <span class="hidden sm:inline">(<%= (sprint.end_date - Date.today).to_i %> days left)</span>
       <% end %>
     </span>
 
@@ -28,12 +28,14 @@
         <span class="ml-2x text-yellow-500">Off-track by <%= sprint.off_track_by %>%</span>
       <% elsif sprint.off_track_by < -5 %>
         <span class="ml-2x text-green-600">Ahead by <%= sprint.off_track_by.abs %>%</span>
+      <% else %>
+        <span class="ml-2x">On-track</span>
       <% end %>
     <% end %>
   </div>
 <% end %>
 
-<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow-md rounded-lg">
+<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow-md rounded-lg dark:bg-black">
   <div class="relative">
     <canvas id="sprintChart"></canvas>
   </div>
@@ -41,9 +43,9 @@
   <div class="grid grid-cols-2 gap-4">
     <!-- Story Points Progress Bar -->
     <div class="mb-4">
-      <h3 class="font-semibold mb-2">Story Points</h3>
+      <h3 class="font-semibold mb-2 dark:text-gray-600">Story Points</h3>
       <div class="flex items-center">
-        <div class="w-full bg-gray-200 rounded-full h-2.5">
+        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-900">
           <div class="bg-blue-600 h-2.5 rounded-full" style="width: <%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%;"></div>
         </div>
         <span class="ml-2 text-gray-700 font-semibold"><%= sprint.points == 0 ? 0 : ((sprint.points_completed.to_f / sprint.points) * 100).round %>%</span>
@@ -66,9 +68,9 @@
 
     <!-- Issues and Pull Requests Progress Bar -->
     <div class="mb-4">
-      <h3 class="font-semibold mb-2">Issues and Pull Requests</h3>
+      <h3 class="font-semibold mb-2 dark:text-gray-600">Issues and Pull Requests</h3>
       <div class="flex items-center">
-        <div class="w-full bg-gray-200 rounded-full h-2.5">
+        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-900">
           <div class="bg-green-600 h-2.5 rounded-full" style="width: <%= sprint.issues.count == 0 ? 0 : ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%;"></div>
         </div>
         <span class="ml-2 text-gray-700 font-semibold"><%= sprint.issues.count == 0 ? 0 : ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%</span>
@@ -184,9 +186,9 @@
   });
 </script>
 
-<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6">
+<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800">
   <div class="px-2 py-2 sm:px-3">
-    <div class="border-gray-200 bg-white px-2 py-2 sm:px-3">
+    <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
         <div class="flex items-center">
           <h3 class="font-bold text-base leading-6 m-0">Remaining issues or pull requests</h3>
@@ -208,9 +210,9 @@
   </div>
 </div>
 
-<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6">
+<div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow mt-6 dark:bg-black dark:divide-gray-800">
   <div class="px-2 py-2 sm:px-3">
-    <div class="border-gray-200 bg-white px-2 py-2 sm:px-3">
+    <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
         <div class="flex items-center">
           <h3 class="font-bold text-base leading-6 m-0">Completed issues or pull requests</h3>
