--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -8,12 +8,12 @@
     <span class="ml-2">
       <% if sprint.end_date.year == Date.today.year && sprint.start_date.year == sprint.end_date.year %>
         <% if sprint.start_date.month == sprint.end_date.month %>
-          <%= sprint.start_date.strftime("%B %-d") %> - <%= sprint.end_date.strftime("%d") %>
+          <%= sprint.start_date.strftime("%B %-d") %> - <%= sprint.end_date.strftime("%-d") %>
         <% else %>
-          <%= sprint.start_date.strftime("%b %d") %> - <%= sprint.end_date.strftime("%b %d") %>
+          <%= sprint.start_date.strftime("%b %-d") %> - <%= sprint.end_date.strftime("%b %-d") %>
         <% end %>
       <% else %>
-        <%= sprint.start_date.strftime("%b %d, %Y") %> - <%= sprint.end_date.strftime("%b %d, %Y") %>
+        <%= sprint.start_date.strftime("%b %-d, %Y") %> - <%= sprint.end_date.strftime("%b %-d, %Y") %>
       <% end %>
       <% if sprint.in_progress? %>
         <span class="hidden sm:inline">(<%= (sprint.end_date - Date.today).to_i %> days left)</span>
@@ -52,11 +52,11 @@
       </div>
       <div class="flex justify-between text-gray-600 mt-2">
         <div>
-          <p class="text-sm">Completed</p>
+          <p class="text-sm">Complete</p>
           <p class="text-lg font-semibold"><%= sprint.points_completed %></p>
         </div>
         <div>
-          <p class="text-sm">Remaining</p>
+          <p class="text-sm">Remain</p>
           <p class="text-lg font-semibold"><%= sprint.points_remaining %></p>
         </div>
         <div>
@@ -68,7 +68,10 @@
 
     <!-- Issues and Pull Requests Progress Bar -->
     <div class="mb-4">
-      <h3 class="font-semibold mb-2 dark:text-gray-600">Issues and Pull Requests</h3>
+      <h3 class="font-semibold mb-2 dark:text-gray-600">
+        <span class="hidden sm:inline">Issues and Pull Requests</span>
+        <span class="sm:hidden">Issues and PRs</span>
+      </h3>
       <div class="flex items-center">
         <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-900">
           <div class="bg-green-600 h-2.5 rounded-full" style="width: <%= sprint.issues.count == 0 ? 0 : ((sprint.issues.closed.count.to_f / sprint.issues.count) * 100).round %>%;"></div>
@@ -77,11 +80,11 @@
       </div>
       <div class="flex justify-between text-gray-600 mt-2">
         <div>
-          <p class="text-sm">Completed</p>
+          <p class="text-sm">Complete</p>
           <p class="text-lg font-semibold"><%= sprint.issues.closed.count %></p>
         </div>
         <div>
-          <p class="text-sm">Remaining</p>
+          <p class="text-sm">Remain</p>
           <p class="text-lg font-semibold"><%= sprint.issues.open.count %></p>
         </div>
         <div>
@@ -98,7 +101,7 @@
     var ctx = document.getElementById('sprintChart').getContext('2d');
     var today = new Date().setHours(0, 0, 0, 0);
 
-    var labels = <%= (sprint.start_date.to_date..sprint.end_date.to_date).map { |date| date.strftime("%a %d") }.to_json %>;
+    var labels = <%= (sprint.start_date.to_date..sprint.end_date.to_date).map { |date| date.strftime("%a %-d") }.to_json %>;
     var remainingData = <%= (sprint.start_date.to_date..sprint.end_date.to_date).map { |date| sprint.issues.where("closed_at IS NULL OR closed_at > ?", date.end_of_day).sum(:points) }.to_json %>;
 
     // Filter out future dates
@@ -191,7 +194,10 @@
     <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
         <div class="flex items-center">
-          <h3 class="font-bold text-base leading-6 m-0">Remaining issues or pull requests</h3>
+          <h3 class="font-bold text-base leading-6 m-0">
+            <span class="hidden sm:inline">Remaining Issues or pull requests</span>
+            <span class="sm:hidden">Remaining Issues or PRs</span>
+          </h3>
         </div>
         <div class="font-bold flex-shrink-0 flex items-center m-0">
           Story Points
@@ -199,7 +205,7 @@
       </div>
     </div>
   </div>
-  <div class="px-4 py-5 sm:p-6">
+  <div class="px-2 py-5 sm:p-6">
     <% if sprint.issues.open.any? %>
       <% sprint.issues.open.each do |issue| %>
         <%= erb :_issue, locals: { issue:, sprint: } %>
@@ -215,7 +221,10 @@
     <div class="border-gray-200 bg-white px-2 py-2 sm:px-3 dark:bg-black">
       <div class="flex items-center justify-between sm:flex-nowrap">
         <div class="flex items-center">
-          <h3 class="font-bold text-base leading-6 m-0">Completed issues or pull requests</h3>
+          <h3 class="font-bold text-base leading-6 m-0">
+            <span class="hidden sm:inline">Completed Issues or pull requests</span>
+            <span class="sm:hidden">Completed Issues or PRs</span>
+          </h3>
         </div>
         <div class="font-bold flex-shrink-0 flex items-center m-0">
           Story Points
@@ -223,7 +232,7 @@
       </div>
     </div>
   </div>
-  <div class="px-4 py-5 sm:p-6">
+  <div class="px-2 py-5 sm:p-6">
     <% if sprint.issues.closed.any? %>
       <% sprint.issues.closed.each do |issue| %>
         <%= erb :_issue, locals: { issue:, sprint: } %>
