--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-white">
+<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-300">
   <div class="min-h-full">
     <nav class="border-b border-gray-200 bg-white dark:bg-black dark:border-gray-700">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
@@ -18,7 +18,7 @@
               </svg>
             </div>
             <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
-              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900 dark:text-gray-400" aria-current="page">Sprint Reports</a>
+              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900 dark:text-gray-500" aria-current="page">Sprint Reports</a>
             </div>
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:items-center">
@@ -43,7 +43,7 @@
 
       <div class="sm:hidden hidden" id="mobile-menu">
         <div class="space-y-1 pb-3 pt-2">
-          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-300" aria-current="page">Sprint Reports</a>
+          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400" aria-current="page">Sprint Reports</a>
         </div>
       </div>
     </nav>
@@ -77,7 +77,7 @@
         </div>
       </header>
       <main class="max-w-screen-xl mx-auto px-2 sm:px-6">
-        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-300">
+        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-400">
           <div class="px-2 py-5 sm:px-6">
             <div class="min-w-0 flex-1">
               <% if content_for?(:title) %>
