--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-300">
+<body class="h-full bg-gray-50 justify-center min-h-screen dark:bg-gray-950 dark:text-gray-100">
   <div class="min-h-full">
     <nav class="border-b border-gray-200 bg-white dark:bg-black dark:border-gray-700">
       <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
@@ -18,14 +18,14 @@
               </svg>
             </div>
             <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
-              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900 dark:text-gray-500" aria-current="page">Sprint Reports</a>
+              <a href="/" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900 dark:text-gray-200" aria-current="page">Sprint Reports</a>
             </div>
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:items-center">
           </div>
           <div class="-mr-2 flex items-center sm:hidden">
             <!-- Mobile menu button -->
-            <button type="button" class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:ring-gray-500" aria-controls="mobile-menu" aria-expanded="false">
+            <button type="button" class="relative inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 dark:bg-gray-800 dark:text-gray-200 dark:hover:bg-gray-700 dark:hover:text-gray-100 dark:focus:ring-gray-500" aria-controls="mobile-menu" aria-expanded="false">
               <span class="absolute -inset-0.5"></span>
               <span class="sr-only">Open main menu</span>
               <!-- Menu open: "hidden", Menu closed: "block" -->
@@ -43,7 +43,7 @@
 
       <div class="sm:hidden hidden" id="mobile-menu">
         <div class="space-y-1 pb-3 pt-2">
-          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400" aria-current="page">Sprint Reports</a>
+          <a href="/" class="block border-l-4 border-indigo-500 bg-indigo-50 py-2 pl-3 pr-4 text-base font-medium text-indigo-700 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-200" aria-current="page">Sprint Reports</a>
         </div>
       </div>
     </nav>
@@ -59,12 +59,12 @@
                     <li>
                       <div class="flex items-center">
                         <% if index != @breadcrumbs.length - 1 %>
-                          <a href="<%= breadcrumb[:path] %>" class="text-sm font-medium text-gray-500 hover:text-gray-700"><%= breadcrumb[:title] %></a>
+                          <a href="<%= breadcrumb[:path] %>" class="text-sm font-medium text-gray-400 hover:text-gray-600 dark:text-gray-300 dark:hover:text-gray-100"><%= breadcrumb[:title] %></a>
                           <svg class="h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
                           </svg>
                         <% else %>
-                          <span class="ml-0 text-sm font-medium text-gray-500 hover:text-gray-700"><%= breadcrumb[:title] %></span>
+                          <span class="ml-0 text-sm font-medium text-gray-600 dark:text-gray-100"><%= breadcrumb[:title] %></span>
                         <% end %>
                       </div>
                     </li>
@@ -77,17 +77,17 @@
         </div>
       </header>
       <main class="max-w-screen-xl mx-auto px-2 sm:px-6">
-        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-400">
+        <div class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow dark:divide-gray-800 dark:bg-gray-900 dark:text-gray-200">
           <div class="px-2 py-5 sm:px-6">
             <div class="min-w-0 flex-1">
               <% if content_for?(:title) %>
                 <%= yield_content(:title) %>
               <% elsif @title %>
-                <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight dark:text-gray-500"><%= @title %></h1>
+                <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight dark:text-gray-200"><%= @title %></h1>
               <% end %>
               <% if content_for? :subtitle %>
                 <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
-                  <div class="mt-2 flex items-center text-sm text-gray-500 dark:text-gray-500">
+                  <div class="mt-2 flex items-center text-sm text-gray-500 dark:text-gray-200">
                     <%= yield_content :subtitle %>
                   </div>
                 </div>
