chore: Show - instead of Not Estimated for points

--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -219,7 +219,7 @@
           </h3>
         </div>
         <div class="font-bold flex-shrink-0 flex items-center m-0">
-          Story Points
+          Assignees / Points
         </div>
       </div>
     </div>
@@ -246,7 +246,7 @@
           </h3>
         </div>
         <div class="font-bold flex-shrink-0 flex items-center m-0">
-          Story Points
+          Assignees / Points
         </div>
       </div>
     </div>
